[project]
name = "broadcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-celery-beat>=2.8.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.9",
    "redis>=6.2.0",
    "psycopg-binary>=3.2.9",
]
